--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
   "dependencies": {
     "body-parser": "^1.15.1",
     "express": "^4.13.4",
+    "fs": "0.0.2",
     "gcloud": "^0.34.0",
+    "multer": "^1.1.0",
     "nearest-neighbor": "0.0.3",
     "node-gyp": "^3.3.1",
     "rebuild": "^0.1.2",
