--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "homepage": "https://github.com/skingaby/postr.git",
   "dependencies": {
     "angular-ui-router": "~0.2.18",
+    "dropzone": "^4.3.0",
     "express": "~4.13.3",
     "materialize-css": "^0.97.1",
     "ng-pickadate": "^0.3.1"
