--- a/backend/package.json
+++ b/backend/package.json
@@ -15,12 +15,16 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.15.1",
+    "crypto": "0.0.3",
     "express": "^4.13.4",
     "fs": "0.0.2",
     "gcloud": "^0.34.0",
+    "jsonwebtoken": "^7.0.0",
     "multer": "^1.1.0",
     "nearest-neighbor": "0.0.3",
     "node-gyp": "^3.3.1",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "rebuild": "^0.1.2",
     "sqlite3": "^3.1.4"
   }
