--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js"
-  },
+  }, 
   "repository": {
     "type": "git",
     "url": "git://github.com/skingaby/postr.git"
+  },
+  "dependencies": {
+    "node-gyp": "^3.3.1",
   },
   "readme": "README.md",
   "author": "Steven Kingaby",
