--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,18 @@
   "author": "Steven Kingaby",
   "license": "ISC",
   "dependencies": {
+    "alike": "^1.3.0",
     "body-parser": "^1.15.1",
     "crypto": "0.0.3",
     "express": "^4.13.4",
+    "express-jwt": "^3.4.0",
     "fs": "0.0.2",
     "gcloud": "^0.34.0",
+    "geolib": "^2.0.21",
     "jsonwebtoken": "^7.0.0",
     "multer": "^1.1.0",
     "nearest-neighbor": "0.0.3",
+    "node-geocoder": "^3.12.0",
     "node-gyp": "^3.3.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
